# VoiceActivatedSmartAssistant

./: .gitignore  CMakeLists.txt  README.md  functionality.cpp  functionality.h  jokes.txt  listener.cpp  listener.h  main.cpp  main.h
